Fix RTL text align of translate page search fields

--- a/pootle/static/css/editor.css
+++ b/pootle/static/css/editor.css
@@ -30,6 +30,11 @@ textarea#view_unit
             box-shadow: 0px 0px 20px #d9d9d9;
 }
 
+html[dir="rtl"] #toolbar
+{
+    text-align: right;
+}
+
 /* Toolbar search */
 
 #toolbar #search
